# eeaieejento

./: .gitignore  README.md  main.py  pyproject.toml
demos/: demo_chat.py  demo_generate.py  demo_tools.py
eeaieejento/: agent.py  cli.py  client.py
eeaieejento/tools/: __init__.py  file_ops.py  memory.py  weather.py  web.py
personas/baachan/memory/: identity.md
personas/default/memory/: identity.md  journal.md  knowledge.md  projects.md  user.md
personas/default/workspace/philosophy/comparison/: note.txt
personas/default/workspace/philosophy/existentialism/: note.txt
personas/gal/memory/: identity.md
personas/hakase/memory/: identity.md  projects.md
personas/jiichan/memory/: identity.md
personas/kaichou/memory/: identity.md
personas/lemmon/memory/: identity.md  projects.md
personas/maru/memory/: identity.md  projects.md
personas/ojousama/memory/: identity.md
personas/oneesan/memory/: identity.md
personas/poet/memory/: identity.md  knowledge.md
personas/sora/memory/: identity.md  journal.md  projects.md
personas/yankee/memory/: identity.md
