[project]
name = "eeaieejento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.10.0",
    "httpx>=0.28.1",
    "trafilatura>=2.0.0",
]

[project.scripts]
eeaieejento = "eeaieejento.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
